internal/controller/testdata/common/operator-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  generateName: cap-operator-domains-
  generation: 1
  annotations:
    sme.sap.com/owner-identifier: CAPOperator.OperatorDomains
  labels:
    sme.sap.com/owner-identifier-hash: 933c63ba93a11feed88e28ae21e68591bf13256b
    sme.sap.com/relevant-dns-target-hash: 2b2bdb40343ac1ec9a7d18bce136a564c026e7d2
  name: cap-operator-domains-gen
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
    - hosts:
        - "*.foo.bar.local"
      port:
        name: foo.bar.local
        number: 443
        protocol: HTTPS
      tls:
        credentialName: test.local
        mode: SIMPLE
